crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3022_copy_from_previous_stage_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 439
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3022",
    "help": null,
    "labels": [],
    "message": "`COPY --from` should reference a previously defined `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 198,
      "end_column": 42,
      "end_line": 7,
      "start_byte": 157,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  },
  {
    "code": "DL3022",
    "help": null,
    "labels": [],
    "message": "`COPY --from` should reference a previously defined `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 236,
      "end_column": 38,
      "end_line": 8,
      "start_byte": 199,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "warning"
  },
  {
    "code": "DL3022",
    "help": null,
    "labels": [],
    "message": "`COPY --from` should reference a previously defined `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 448,
      "end_column": 79,
      "end_line": 11,
      "start_byte": 370,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "warning"
  },
  {
    "code": "DL3022",
    "help": null,
    "labels": [],
    "message": "`COPY --from` should reference a previously defined `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 542,
      "end_column": 32,
      "end_line": 15,
      "start_byte": 511,
      "start_column": 1,
      "start_line": 15
    },
    "severity": "warning"
  },
  {
    "code": "DL3022",
    "help": null,
    "labels": [],
    "message": "`COPY --from` should reference a previously defined `FROM` alias",
    "path": "",
    "primary_span": {
      "end_byte": 659,
      "end_column": 55,
      "end_line": 19,
      "start_byte": 605,
      "start_column": 1,
      "start_line": 19
    },
    "severity": "warning"
  }
]
