crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3023_copy_from_own_stage_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 455
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3023",
    "help": null,
    "labels": [],
    "message": "`COPY --from` cannot reference the current build stage",
    "path": "",
    "primary_span": {
      "end_byte": 94,
      "end_column": 33,
      "end_line": 3,
      "start_byte": 62,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "DL3023",
    "help": null,
    "labels": [],
    "message": "`COPY --from` cannot reference the current build stage",
    "path": "",
    "primary_span": {
      "end_byte": 129,
      "end_column": 35,
      "end_line": 4,
      "start_byte": 95,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "error"
  },
  {
    "code": "DL3023",
    "help": null,
    "labels": [],
    "message": "`COPY --from` cannot reference the current build stage",
    "path": "",
    "primary_span": {
      "end_byte": 221,
      "end_column": 31,
      "end_line": 8,
      "start_byte": 191,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "error"
  },
  {
    "code": "DL3023",
    "help": null,
    "labels": [],
    "message": "`COPY --from` cannot reference the current build stage",
    "path": "",
    "primary_span": {
      "end_byte": 262,
      "end_column": 41,
      "end_line": 9,
      "start_byte": 222,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "error"
  },
  {
    "code": "DL3023",
    "help": null,
    "labels": [],
    "message": "`COPY --from` cannot reference the current build stage",
    "path": "",
    "primary_span": {
      "end_byte": 325,
      "end_column": 31,
      "end_line": 11,
      "start_byte": 295,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "error"
  }
]
