crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3025_json_entrypoints_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 493
expression: "serde_json::json!({ \"findings\": findings, \"fixes\": fixes, })"
---
{
  "findings": [
    {
      "code": "DL3025",
      "help": null,
      "labels": [],
      "message": "use exec/JSON form for CMD and ENTRYPOINT",
      "path": "",
      "primary_span": {
        "end_byte": 31,
        "end_column": 15,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "severity": "warning"
    },
    {
      "code": "DL3025",
      "help": null,
      "labels": [],
      "message": "use exec/JSON form for CMD and ENTRYPOINT",
      "path": "",
      "primary_span": {
        "end_byte": 65,
        "end_column": 34,
        "end_line": 3,
        "start_byte": 32,
        "start_column": 1,
        "start_line": 3
      },
      "severity": "warning"
    }
  ],
  "fixes": [
    {
      "applicability": {
        "type": "manual"
      },
      "edits": [],
      "title": "convert CMD to exec/JSON form"
    },
    {
      "applicability": {
        "type": "manual"
      },
      "edits": [],
      "title": "convert ENTRYPOINT to exec/JSON form"
    }
  ]
}
