crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3026_trusted_registries_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 516
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3026",
    "help": null,
    "labels": [],
    "message": "base image `docker.io/library/alpine:3.20` is not from a trusted registry",
    "path": "",
    "primary_span": {
      "end_byte": 124,
      "end_column": 48,
      "end_line": 4,
      "start_byte": 77,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "error"
  },
  {
    "code": "DL3026",
    "help": null,
    "labels": [],
    "message": "base image `alpine:3.20` is not from a trusted registry",
    "path": "",
    "primary_span": {
      "end_byte": 268,
      "end_column": 29,
      "end_line": 10,
      "start_byte": 240,
      "start_column": 1,
      "start_line": 10
    },
    "severity": "error"
  }
]
