crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3028_pin_gem_versions_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 548
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3028",
    "help": null,
    "labels": [],
    "message": "pin versions in gem install",
    "path": "",
    "primary_span": {
      "end_byte": 37,
      "end_column": 24,
      "end_line": 2,
      "start_byte": 14,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "DL3028",
    "help": null,
    "labels": [],
    "message": "pin versions in gem install",
    "path": "",
    "primary_span": {
      "end_byte": 103,
      "end_column": 35,
      "end_line": 4,
      "start_byte": 69,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "DL3028",
    "help": null,
    "labels": [],
    "message": "pin versions in gem install",
    "path": "",
    "primary_span": {
      "end_byte": 260,
      "end_column": 32,
      "end_line": 9,
      "start_byte": 229,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "warning"
  },
  {
    "code": "DL3028",
    "help": null,
    "labels": [],
    "message": "pin versions in gem install",
    "path": "",
    "primary_span": {
      "end_byte": 341,
      "end_column": 37,
      "end_line": 11,
      "start_byte": 305,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "warning"
  },
  {
    "code": "DL3028",
    "help": null,
    "labels": [],
    "message": "pin versions in gem install",
    "path": "",
    "primary_span": {
      "end_byte": 464,
      "end_column": 27,
      "end_line": 14,
      "start_byte": 438,
      "start_column": 1,
      "start_line": 14
    },
    "severity": "warning"
  },
  {
    "code": "DL3028",
    "help": null,
    "labels": [],
    "message": "pin versions in gem install",
    "path": "",
    "primary_span": {
      "end_byte": 499,
      "end_column": 35,
      "end_line": 15,
      "start_byte": 465,
      "start_column": 1,
      "start_line": 15
    },
    "severity": "warning"
  }
]
