crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3029_no_from_platform_flag_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3029",
    "help": null,
    "labels": [],
    "message": "avoid `--platform` in FROM; prefer build-time platform selection",
    "path": "",
    "primary_span": {
      "end_byte": 73,
      "end_column": 49,
      "end_line": 2,
      "start_byte": 25,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  }
]
