crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3032_yum_clean_all_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 596
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3032",
    "help": null,
    "labels": [],
    "message": "clean yum metadata with `yum clean all` in the same RUN layer",
    "path": "",
    "primary_span": {
      "end_byte": 41,
      "end_column": 24,
      "end_line": 2,
      "start_byte": 18,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "info"
  },
  {
    "code": "DL3032",
    "help": null,
    "labels": [],
    "message": "clean yum metadata with `yum clean all` in the same RUN layer",
    "path": "",
    "primary_span": {
      "end_byte": 184,
      "end_column": 35,
      "end_line": 7,
      "start_byte": 150,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "info"
  },
  {
    "code": "DL3032",
    "help": null,
    "labels": [],
    "message": "clean yum metadata with `yum clean all` in the same RUN layer",
    "path": "",
    "primary_span": {
      "end_byte": 226,
      "end_column": 42,
      "end_line": 8,
      "start_byte": 185,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "info"
  },
  {
    "code": "DL3032",
    "help": null,
    "labels": [],
    "message": "clean yum metadata with `yum clean all` in the same RUN layer",
    "path": "",
    "primary_span": {
      "end_byte": 384,
      "end_column": 42,
      "end_line": 11,
      "start_byte": 343,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "info"
  },
  {
    "code": "DL3032",
    "help": null,
    "labels": [],
    "message": "clean yum metadata with `yum clean all` in the same RUN layer",
    "path": "",
    "primary_span": {
      "end_byte": 458,
      "end_column": 74,
      "end_line": 12,
      "start_byte": 385,
      "start_column": 1,
      "start_line": 12
    },
    "severity": "info"
  }
]
