crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3033_pin_yum_versions_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 612
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3033",
    "help": null,
    "labels": [],
    "message": "pin versions in yum install",
    "path": "",
    "primary_span": {
      "end_byte": 41,
      "end_column": 24,
      "end_line": 2,
      "start_byte": 18,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "DL3033",
    "help": null,
    "labels": [],
    "message": "pin versions in yum install",
    "path": "",
    "primary_span": {
      "end_byte": 106,
      "end_column": 35,
      "end_line": 4,
      "start_byte": 72,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "DL3033",
    "help": null,
    "labels": [],
    "message": "pin versions in yum install",
    "path": "",
    "primary_span": {
      "end_byte": 180,
      "end_column": 34,
      "end_line": 6,
      "start_byte": 147,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  },
  {
    "code": "DL3033",
    "help": null,
    "labels": [],
    "message": "pin versions in yum install",
    "path": "",
    "primary_span": {
      "end_byte": 264,
      "end_column": 35,
      "end_line": 9,
      "start_byte": 230,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "warning"
  },
  {
    "code": "DL3033",
    "help": null,
    "labels": [],
    "message": "pin versions in yum install",
    "path": "",
    "primary_span": {
      "end_byte": 356,
      "end_column": 43,
      "end_line": 11,
      "start_byte": 314,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "warning"
  }
]
